export interface Product {
  getName(): string;
  getPrice(): number;
}
